--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
-#TODO
+# mysql variables
+MYSQL_ROOT_PASSWORD=password
+MYSQL_DATABASE=wordpress
+MYSQL_USER=wordpress
+MYSQL_PASSWORD=wordpress
+
+# phpmyadmin variables
+MYSQL_ROOT_PASSWORD=password
